[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/ui/commons/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://game/ui/commons/main_menu/main.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/escoria-core/design/escoria-logo-small.png" type="Texture" id=3]
[ext_resource path="res://game/ui/commons/options/options.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/ui/commons/load/load_game.tscn" type="PackedScene" id=5]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="main" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 332.0
margin_top = 151.0
margin_right = 948.0
margin_bottom = 748.0
custom_constants/separation = 100

[node name="TextureRect" type="TextureRect" parent="Panel/CenterContainer/main"]
margin_right = 616.0
margin_bottom = 236.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" parent="Panel/CenterContainer/main" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 336.0
margin_right = 616.0
margin_bottom = 597.0

[node name="new_game" parent="Panel/CenterContainer/main/buttons" index="0"]
margin_right = 616.0
margin_bottom = 150.0

[node name="load_game" parent="Panel/CenterContainer/main/buttons" index="1"]
margin_top = 160.0
margin_right = 616.0
margin_bottom = 187.0

[node name="options" parent="Panel/CenterContainer/main/buttons" index="2"]
margin_top = 197.0
margin_right = 616.0
margin_bottom = 224.0

[node name="quit" parent="Panel/CenterContainer/main/buttons" index="3"]
margin_top = 234.0
margin_right = 616.0
margin_bottom = 261.0

[node name="options" parent="Panel" instance=ExtResource( 4 )]
visible = false

[node name="load_game" parent="Panel" instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="Panel/CenterContainer/main/buttons/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/main/buttons/load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/main/buttons/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/main/buttons/quit" to="." method="_on_quit_pressed"]
[connection signal="back_button_pressed" from="Panel/options" to="." method="_on_options_back_button_pressed"]
[connection signal="back_button_pressed" from="Panel/load_game" to="." method="_on_load_game_back_button_pressed"]

[editable path="Panel/CenterContainer/main/buttons"]
